# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2

  01 Nov 2006; Roy Marples <uberlord@gentoo.org>:

    Clarified pppd maxfail usage, #153657 thanks to Toralf Förster.

  31 Oct 2006; Roy Marples <uberlord@gentoo.org>:

    tuntap should come before bridge, #150520.

  30 Sep 2006; Roy Marples <uberlord@gentoo.org>:

    Added warning about clamping MSS when running ppp on a router, #149525
    thanks to Alin Nastac.

    Punted DISPLAYMANAGER from /etc/rc.conf as it's now in /etc/conf.d/xdm

  26 Sep 2006; Roy Marples <uberlord@gentoo.org>:

    Don't wait for scheduled services to restart when a service is
    started in the background as this may tie up the calling daemon, #148700.

    Give ppp at least 30 seconds to die, #147490, thanks to Alin Nastac.

  25 Sep 2006; Roy Marples <uberlord@gentoo.org>:

    Don't rename bridged or bonded interfaces either, #145581.

  19 Sep 2006; Roy Marples <uberlord@gentoo.org>:

    Start scheduled services in the correct order, #148011.

  06 Sep 2006; Roy Marples <uberlord@gentoo.org>:

    Fix PPPoA usage, #144194 thanks to Giampaolo Tomassoni.

    iproute2 netlink check has been moved to the ebuild.

    When stopping a ppp link, don't remove the IP address, #145034.

  05 Sep 2006; Roy Marples <uberlord@gentoo.org>:
  
    wpa_supplicant packet socket checks have been moved to the ebuild.

  21 Aug 2006; Roy Marples <uberlord@gentoo.org>:

    Each dhcp client now supports global options - ie dhcpcd="-a"

    Classical IP over ATM support has been added, #108153 thanks to
    Giampaolo Tomassoni. Note that he will not support the module and no
    Gentoo devs have the hardware so any bugs reported may take time to fix.

  18 Aug 2006; Roy Marples <uberlord@gentoo.org>:

    Don't stop services that are depended on by coldplugged services.

  17 Aug 2006; Roy Marples <uberlord@gentoo.org>:

    Document ppp plugin options, #144194.
