@@ -1,6 +1,14 @@
 # ChangeLog for Gentoo System Intialization ("rc") scripts
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2
 
+* baselayout-1.12.6 (02 Nov 2006)
+
+  02 Nov 2006; Roy Marples <uberlord@gentoo.org>:
+
+    We no longer unmount ramfs in halt.sh, #151128
+    We no longer use =~ for the 1.12 branch only as we should work on all
+    bash versions, #151108
+
   01 Nov 2006; Roy Marples <uberlord@gentoo.org>:
 
     Clarified pppd maxfail usage, #153657 thanks to Toralf Förster.
